Parser.output
   0  $accept : %entry% $end

   1  start : includes program EOF

   2  includes :
   3           | includes includ

   4  includ : INCLUDE STRING

   5  program : declaration
   6          | program declaration

   7  declaration : var_declaration
   8              | func_declaration
   9              | func_definition

  10  var_declaration : typea declarators SEMICOLON

  11  declarators : declarator
  12              | declarators COMMA declarator

  13  typea : b_typea
  14        | typea TIMES

  15  b_typea : INT
  16          | DOUBLE
  17          | BOOL
  18          | CHAR

  19  declarator : IDENT
  20             | IDENT LBRACK constant_exp RBRACK

  21  func_declaration : typea IDENT LPAREN op_parameter_list RPAREN SEMICOLON
  22                   | VOID IDENT LPAREN op_parameter_list RPAREN SEMICOLON

  23  op_parameter_list :
  24                    | parameter_list

  25  parameter_list : parameter parameters

  26  parameters :
  27             | COMMA parameter parameters

  28  parameter : BYREF typea IDENT
  29            | typea IDENT

  30  func_definition : typea IDENT LPAREN op_parameter_list RPAREN LCBRACK declarations statements RCBRACK
  31                  | VOID IDENT LPAREN op_parameter_list RPAREN LCBRACK declarations statements RCBRACK

  32  declarations :
  33               | declarations declaration

  34  statements :
  35             | statements statement

  36  op_exp :
  37         | expression

  38  op_ident_colon :
  39                 | IDENT COLON

  40  op_ident :
  41           | IDENT

  42  statement : SEMICOLON
  43            | expression SEMICOLON
  44            | LCBRACK statements RCBRACK
  45            | IF LPAREN expression RPAREN statement
  46            | IF LPAREN expression RPAREN statement ELSE statement
  47            | op_ident_colon FOR LPAREN op_exp SEMICOLON op_exp SEMICOLON op_exp RPAREN statement
  48            | CONTINUE op_ident SEMICOLON
  49            | BREAK op_ident SEMICOLON
  50            | RETURN op_exp SEMICOLON

  51  expression : IDENT
  52             | LPAREN expression RPAREN
  53             | TRUE
  54             | FALSE
  55             | NULL
  56             | INT_NUM
  57             | CHAR_V
  58             | DOUBLE_NUM
  59             | STRING
  60             | IDENT LPAREN op_exp_list RPAREN
  61             | unary_op expression
  62             | unary_assignment expression
  63             | LPAREN typea RPAREN expression
  64             | NEW typea op_brack_exp
  65             | DELETE expression
  66             | expression LBRACK expression RBRACK
  67             | expression binary_op expression
  68             | expression unary_assignment
  69             | expression binary_assignment expression
  70             | expression Q_MARK expression COLON expression

  71  op_exp_list :
  72              | expression_list

  73  op_brack_exp :
  74               | LBRACK expression RBRACK

  75  expression_list : expression
  76                  | expression_list COMMA expression

  77  constant_exp : expression

  78  unary_op : AMPERSAND
  79           | TIMES
  80           | PLUS
  81           | MINUS
  82           | NOT

  83  binary_op : TIMES
  84            | DIV
  85            | MOD
  86            | PLUS
  87            | MINUS
  88            | LESS
  89            | GREATER
  90            | LESS_EQ
  91            | GREAT_EQ
  92            | EQUAL
  93            | N_EQUAL
  94            | AND
  95            | OR
  96            | COMMA

  97  unary_assignment : PPLUS
  98                   | MMINUS

  99  binary_assignment : ASSIGN
 100                    | ASSIGN_TIMES
 101                    | ASSIGN_DIV
 102                    | ASSIGN_MOD
 103                    | ASSIGN_ADD
 104                    | ASSIGN_MINUS

 105  %entry% : '\001' start

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . start  (105)
	includes : .  (2)

	.  reduce 2

	start  goto 3
	includes  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' start .  (105)

	.  reduce 105


state 4
	start : includes . program EOF  (1)
	includes : includes . includ  (3)

	BOOL  shift 5
	DOUBLE  shift 6
	INT  shift 7
	VOID  shift 8
	CHAR  shift 9
	INCLUDE  shift 10
	.  error

	includ  goto 11
	program  goto 12
	declaration  goto 13
	var_declaration  goto 14
	func_declaration  goto 15
	func_definition  goto 16
	typea  goto 17
	b_typea  goto 18


state 5
	b_typea : BOOL .  (17)

	.  reduce 17


state 6
	b_typea : DOUBLE .  (16)

	.  reduce 16


state 7
	b_typea : INT .  (15)

	.  reduce 15


state 8
	func_declaration : VOID . IDENT LPAREN op_parameter_list RPAREN SEMICOLON  (22)
	func_definition : VOID . IDENT LPAREN op_parameter_list RPAREN LCBRACK declarations statements RCBRACK  (31)

	IDENT  shift 19
	.  error


state 9
	b_typea : CHAR .  (18)

	.  reduce 18


state 10
	includ : INCLUDE . STRING  (4)

	STRING  shift 20
	.  error


state 11
	includes : includes includ .  (3)

	.  reduce 3


state 12
	start : includes program . EOF  (1)
	program : program . declaration  (6)

	BOOL  shift 5
	DOUBLE  shift 6
	INT  shift 7
	VOID  shift 8
	CHAR  shift 9
	EOF  shift 21
	.  error

	declaration  goto 22
	var_declaration  goto 14
	func_declaration  goto 15
	func_definition  goto 16
	typea  goto 17
	b_typea  goto 18


state 13
	program : declaration .  (5)

	.  reduce 5


state 14
	declaration : var_declaration .  (7)

	.  reduce 7


state 15
	declaration : func_declaration .  (8)

	.  reduce 8


state 16
	declaration : func_definition .  (9)

	.  reduce 9


state 17
	var_declaration : typea . declarators SEMICOLON  (10)
	typea : typea . TIMES  (14)
	func_declaration : typea . IDENT LPAREN op_parameter_list RPAREN SEMICOLON  (21)
	func_definition : typea . IDENT LPAREN op_parameter_list RPAREN LCBRACK declarations statements RCBRACK  (30)

	IDENT  shift 23
	TIMES  shift 24
	.  error

	declarators  goto 25
	declarator  goto 26


state 18
	typea : b_typea .  (13)

	.  reduce 13


state 19
	func_declaration : VOID IDENT . LPAREN op_parameter_list RPAREN SEMICOLON  (22)
	func_definition : VOID IDENT . LPAREN op_parameter_list RPAREN LCBRACK declarations statements RCBRACK  (31)

	LPAREN  shift 27
	.  error


state 20
	includ : INCLUDE STRING .  (4)

	.  reduce 4


state 21
	start : includes program EOF .  (1)

	.  reduce 1


state 22
	program : program declaration .  (6)

	.  reduce 6


state 23
	declarator : IDENT .  (19)
	declarator : IDENT . LBRACK constant_exp RBRACK  (20)
	func_declaration : typea IDENT . LPAREN op_parameter_list RPAREN SEMICOLON  (21)
	func_definition : typea IDENT . LPAREN op_parameter_list RPAREN LCBRACK declarations statements RCBRACK  (30)

	LPAREN  shift 28
	LBRACK  shift 29
	COMMA  reduce 19
	SEMICOLON  reduce 19


state 24
	typea : typea TIMES .  (14)

	.  reduce 14


state 25
	var_declaration : typea declarators . SEMICOLON  (10)
	declarators : declarators . COMMA declarator  (12)

	COMMA  shift 30
	SEMICOLON  shift 31
	.  error


state 26
	declarators : declarator .  (11)

	.  reduce 11


state 27
	func_declaration : VOID IDENT LPAREN . op_parameter_list RPAREN SEMICOLON  (22)
	func_definition : VOID IDENT LPAREN . op_parameter_list RPAREN LCBRACK declarations statements RCBRACK  (31)
	op_parameter_list : .  (23)

	BOOL  shift 5
	BYREF  shift 32
	DOUBLE  shift 6
	INT  shift 7
	CHAR  shift 9
	RPAREN  reduce 23

	typea  goto 33
	b_typea  goto 18
	op_parameter_list  goto 34
	parameter_list  goto 35
	parameter  goto 36


state 28
	func_declaration : typea IDENT LPAREN . op_parameter_list RPAREN SEMICOLON  (21)
	func_definition : typea IDENT LPAREN . op_parameter_list RPAREN LCBRACK declarations statements RCBRACK  (30)
	op_parameter_list : .  (23)

	BOOL  shift 5
	BYREF  shift 32
	DOUBLE  shift 6
	INT  shift 7
	CHAR  shift 9
	RPAREN  reduce 23

	typea  goto 33
	b_typea  goto 18
	op_parameter_list  goto 37
	parameter_list  goto 35
	parameter  goto 36


state 29
	declarator : IDENT LBRACK . constant_exp RBRACK  (20)

	DELETE  shift 38
	FALSE  shift 39
	NEW  shift 40
	INT_NUM  shift 41
	DOUBLE_NUM  shift 42
	NULL  shift 43
	TRUE  shift 44
	IDENT  shift 45
	CHAR_V  shift 46
	STRING  shift 47
	PLUS  shift 48
	MINUS  shift 49
	TIMES  shift 50
	AMPERSAND  shift 51
	NOT  shift 52
	PPLUS  shift 53
	MMINUS  shift 54
	LPAREN  shift 55
	.  error

	expression  goto 56
	constant_exp  goto 57
	unary_op  goto 58
	unary_assignment  goto 59


state 30
	declarators : declarators COMMA . declarator  (12)

	IDENT  shift 60
	.  error

	declarator  goto 61


state 31
	var_declaration : typea declarators SEMICOLON .  (10)

	.  reduce 10


state 32
	parameter : BYREF . typea IDENT  (28)

	BOOL  shift 5
	DOUBLE  shift 6
	INT  shift 7
	CHAR  shift 9
	.  error

	typea  goto 62
	b_typea  goto 18


state 33
	typea : typea . TIMES  (14)
	parameter : typea . IDENT  (29)

	IDENT  shift 63
	TIMES  shift 24
	.  error


state 34
	func_declaration : VOID IDENT LPAREN op_parameter_list . RPAREN SEMICOLON  (22)
	func_definition : VOID IDENT LPAREN op_parameter_list . RPAREN LCBRACK declarations statements RCBRACK  (31)

	RPAREN  shift 64
	.  error


state 35
	op_parameter_list : parameter_list .  (24)

	.  reduce 24


state 36
	parameter_list : parameter . parameters  (25)
	parameters : .  (26)

	COMMA  shift 65
	RPAREN  reduce 26

	parameters  goto 66


state 37
	func_declaration : typea IDENT LPAREN op_parameter_list . RPAREN SEMICOLON  (21)
	func_definition : typea IDENT LPAREN op_parameter_list . RPAREN LCBRACK declarations statements RCBRACK  (30)

	RPAREN  shift 67
	.  error


state 38
	expression : DELETE . expression  (65)

	DELETE  shift 38
	FALSE  shift 39
	NEW  shift 40
	INT_NUM  shift 41
	DOUBLE_NUM  shift 42
	NULL  shift 43
	TRUE  shift 44
	IDENT  shift 45
	CHAR_V  shift 46
	STRING  shift 47
	PLUS  shift 48
	MINUS  shift 49
	TIMES  shift 50
	AMPERSAND  shift 51
	NOT  shift 52
	PPLUS  shift 53
	MMINUS  shift 54
	LPAREN  shift 55
	.  error

	expression  goto 68
	unary_op  goto 58
	unary_assignment  goto 59


state 39
	expression : FALSE .  (54)

	.  reduce 54


state 40
	expression : NEW . typea op_brack_exp  (64)

	BOOL  shift 5
	DOUBLE  shift 6
	INT  shift 7
	CHAR  shift 9
	.  error

	typea  goto 69
	b_typea  goto 18


state 41
	expression : INT_NUM .  (56)

	.  reduce 56


state 42
	expression : DOUBLE_NUM .  (58)

	.  reduce 58


state 43
	expression : NULL .  (55)

	.  reduce 55


state 44
	expression : TRUE .  (53)

	.  reduce 53


state 45
	expression : IDENT .  (51)
	expression : IDENT . LPAREN op_exp_list RPAREN  (60)

	LPAREN  shift 70
	ASSIGN  reduce 51
	PLUS  reduce 51
	MINUS  reduce 51
	TIMES  reduce 51
	DIV  reduce 51
	GREATER  reduce 51
	LESS  reduce 51
	MOD  reduce 51
	Q_MARK  reduce 51
	COLON  reduce 51
	COMMA  reduce 51
	EQUAL  reduce 51
	N_EQUAL  reduce 51
	GREAT_EQ  reduce 51
	LESS_EQ  reduce 51
	AND  reduce 51
	OR  reduce 51
	PPLUS  reduce 51
	MMINUS  reduce 51
	ASSIGN_ADD  reduce 51
	ASSIGN_MINUS  reduce 51
	ASSIGN_TIMES  reduce 51
	ASSIGN_DIV  reduce 51
	ASSIGN_MOD  reduce 51
	SEMICOLON  reduce 51
	RPAREN  reduce 51
	LBRACK  reduce 51
	RBRACK  reduce 51


state 46
	expression : CHAR_V .  (57)

	.  reduce 57


state 47
	expression : STRING .  (59)

	.  reduce 59


state 48
	unary_op : PLUS .  (80)

	.  reduce 80


state 49
	unary_op : MINUS .  (81)

	.  reduce 81


state 50
	unary_op : TIMES .  (79)

	.  reduce 79


state 51
	unary_op : AMPERSAND .  (78)

	.  reduce 78


state 52
	unary_op : NOT .  (82)

	.  reduce 82


state 53
	unary_assignment : PPLUS .  (97)

	.  reduce 97


state 54
	unary_assignment : MMINUS .  (98)

	.  reduce 98


state 55
	expression : LPAREN . expression RPAREN  (52)
	expression : LPAREN . typea RPAREN expression  (63)

	BOOL  shift 5
	DELETE  shift 38
	DOUBLE  shift 6
	FALSE  shift 39
	INT  shift 7
	NEW  shift 40
	INT_NUM  shift 41
	DOUBLE_NUM  shift 42
	NULL  shift 43
	TRUE  shift 44
	IDENT  shift 45
	CHAR_V  shift 46
	CHAR  shift 9
	STRING  shift 47
	PLUS  shift 48
	MINUS  shift 49
	TIMES  shift 50
	AMPERSAND  shift 51
	NOT  shift 52
	PPLUS  shift 53
	MMINUS  shift 54
	LPAREN  shift 55
	.  error

	typea  goto 71
	b_typea  goto 18
	expression  goto 72
	unary_op  goto 58
	unary_assignment  goto 59


state 56
	expression : expression . LBRACK expression RBRACK  (66)
	expression : expression . binary_op expression  (67)
	expression : expression . unary_assignment  (68)
	expression : expression . binary_assignment expression  (69)
	expression : expression . Q_MARK expression COLON expression  (70)
	constant_exp : expression .  (77)

	ASSIGN  shift 73
	PLUS  shift 74
	MINUS  shift 75
	TIMES  shift 76
	DIV  shift 77
	GREATER  shift 78
	LESS  shift 79
	MOD  shift 80
	Q_MARK  shift 81
	COMMA  shift 82
	EQUAL  shift 83
	N_EQUAL  shift 84
	GREAT_EQ  shift 85
	LESS_EQ  shift 86
	AND  shift 87
	OR  shift 88
	PPLUS  shift 53
	MMINUS  shift 54
	ASSIGN_ADD  shift 89
	ASSIGN_MINUS  shift 90
	ASSIGN_TIMES  shift 91
	ASSIGN_DIV  shift 92
	ASSIGN_MOD  shift 93
	LBRACK  shift 94
	RBRACK  reduce 77

	unary_assignment  goto 95
	binary_op  goto 96
	binary_assignment  goto 97


state 57
	declarator : IDENT LBRACK constant_exp . RBRACK  (20)

	RBRACK  shift 98
	.  error


state 58
	expression : unary_op . expression  (61)

	DELETE  shift 38
	FALSE  shift 39
	NEW  shift 40
	INT_NUM  shift 41
	DOUBLE_NUM  shift 42
	NULL  shift 43
	TRUE  shift 44
	IDENT  shift 45
	CHAR_V  shift 46
	STRING  shift 47
	PLUS  shift 48
	MINUS  shift 49
	TIMES  shift 50
	AMPERSAND  shift 51
	NOT  shift 52
	PPLUS  shift 53
	MMINUS  shift 54
	LPAREN  shift 55
	.  error

	expression  goto 99
	unary_op  goto 58
	unary_assignment  goto 59


state 59
	expression : unary_assignment . expression  (62)

	DELETE  shift 38
	FALSE  shift 39
	NEW  shift 40
	INT_NUM  shift 41
	DOUBLE_NUM  shift 42
	NULL  shift 43
	TRUE  shift 44
	IDENT  shift 45
	CHAR_V  shift 46
	STRING  shift 47
	PLUS  shift 48
	MINUS  shift 49
	TIMES  shift 50
	AMPERSAND  shift 51
	NOT  shift 52
	PPLUS  shift 53
	MMINUS  shift 54
	LPAREN  shift 55
	.  error

	expression  goto 100
	unary_op  goto 58
	unary_assignment  goto 59


state 60
	declarator : IDENT .  (19)
	declarator : IDENT . LBRACK constant_exp RBRACK  (20)

	LBRACK  shift 29
	COMMA  reduce 19
	SEMICOLON  reduce 19


state 61
	declarators : declarators COMMA declarator .  (12)

	.  reduce 12


state 62
	typea : typea . TIMES  (14)
	parameter : BYREF typea . IDENT  (28)

	IDENT  shift 101
	TIMES  shift 24
	.  error


state 63
	parameter : typea IDENT .  (29)

	.  reduce 29


state 64
	func_declaration : VOID IDENT LPAREN op_parameter_list RPAREN . SEMICOLON  (22)
	func_definition : VOID IDENT LPAREN op_parameter_list RPAREN . LCBRACK declarations statements RCBRACK  (31)

	SEMICOLON  shift 102
	LCBRACK  shift 103
	.  error


state 65
	parameters : COMMA . parameter parameters  (27)

	BOOL  shift 5
	BYREF  shift 32
	DOUBLE  shift 6
	INT  shift 7
	CHAR  shift 9
	.  error

	typea  goto 33
	b_typea  goto 18
	parameter  goto 104


state 66
	parameter_list : parameter parameters .  (25)

	.  reduce 25


state 67
	func_declaration : typea IDENT LPAREN op_parameter_list RPAREN . SEMICOLON  (21)
	func_definition : typea IDENT LPAREN op_parameter_list RPAREN . LCBRACK declarations statements RCBRACK  (30)

	SEMICOLON  shift 105
	LCBRACK  shift 106
	.  error


68: shift/reduce conflict (shift 90, reduce 65) on ASSIGN_MINUS
68: shift/reduce conflict (shift 94, reduce 65) on LBRACK
state 68
	expression : DELETE expression .  (65)
	expression : expression . LBRACK expression RBRACK  (66)
	expression : expression . binary_op expression  (67)
	expression : expression . unary_assignment  (68)
	expression : expression . binary_assignment expression  (69)
	expression : expression . Q_MARK expression COLON expression  (70)

	ASSIGN_MINUS  shift 90
	LBRACK  shift 94
	ASSIGN  reduce 65
	PLUS  reduce 65
	MINUS  reduce 65
	TIMES  reduce 65
	DIV  reduce 65
	GREATER  reduce 65
	LESS  reduce 65
	MOD  reduce 65
	Q_MARK  reduce 65
	COLON  reduce 65
	COMMA  reduce 65
	EQUAL  reduce 65
	N_EQUAL  reduce 65
	GREAT_EQ  reduce 65
	LESS_EQ  reduce 65
	AND  reduce 65
	OR  reduce 65
	PPLUS  reduce 65
	MMINUS  reduce 65
	ASSIGN_ADD  reduce 65
	ASSIGN_TIMES  reduce 65
	ASSIGN_DIV  reduce 65
	ASSIGN_MOD  reduce 65
	SEMICOLON  reduce 65
	RPAREN  reduce 65
	RBRACK  reduce 65

	unary_assignment  goto 95
	binary_op  goto 96
	binary_assignment  goto 97


69: shift/reduce conflict (shift 24, reduce 73) on TIMES
69: shift/reduce conflict (shift 107, reduce 73) on LBRACK
state 69
	typea : typea . TIMES  (14)
	expression : NEW typea . op_brack_exp  (64)
	op_brack_exp : .  (73)

	TIMES  shift 24
	LBRACK  shift 107
	ASSIGN  reduce 73
	PLUS  reduce 73
	MINUS  reduce 73
	DIV  reduce 73
	GREATER  reduce 73
	LESS  reduce 73
	MOD  reduce 73
	Q_MARK  reduce 73
	COLON  reduce 73
	COMMA  reduce 73
	EQUAL  reduce 73
	N_EQUAL  reduce 73
	GREAT_EQ  reduce 73
	LESS_EQ  reduce 73
	AND  reduce 73
	OR  reduce 73
	PPLUS  reduce 73
	MMINUS  reduce 73
	ASSIGN_ADD  reduce 73
	ASSIGN_MINUS  reduce 73
	ASSIGN_TIMES  reduce 73
	ASSIGN_DIV  reduce 73
	ASSIGN_MOD  reduce 73
	SEMICOLON  reduce 73
	RPAREN  reduce 73
	RBRACK  reduce 73

	op_brack_exp  goto 108


state 70
	expression : IDENT LPAREN . op_exp_list RPAREN  (60)
	op_exp_list : .  (71)

	DELETE  shift 38
	FALSE  shift 39
	NEW  shift 40
	INT_NUM  shift 41
	DOUBLE_NUM  shift 42
	NULL  shift 43
	TRUE  shift 44
	IDENT  shift 45
	CHAR_V  shift 46
	STRING  shift 47
	PLUS  shift 48
	MINUS  shift 49
	TIMES  shift 50
	AMPERSAND  shift 51
	NOT  shift 52
	PPLUS  shift 53
	MMINUS  shift 54
	LPAREN  shift 55
	RPAREN  reduce 71

	expression  goto 109
	expression_list  goto 110
	op_exp_list  goto 111
	unary_op  goto 58
	unary_assignment  goto 59


state 71
	typea : typea . TIMES  (14)
	expression : LPAREN typea . RPAREN expression  (63)

	TIMES  shift 24
	RPAREN  shift 112
	.  error


state 72
	expression : LPAREN expression . RPAREN  (52)
	expression : expression . LBRACK expression RBRACK  (66)
	expression : expression . binary_op expression  (67)
	expression : expression . unary_assignment  (68)
	expression : expression . binary_assignment expression  (69)
	expression : expression . Q_MARK expression COLON expression  (70)

	ASSIGN  shift 73
	PLUS  shift 74
	MINUS  shift 75
	TIMES  shift 76
	DIV  shift 77
	GREATER  shift 78
	LESS  shift 79
	MOD  shift 80
	Q_MARK  shift 81
	COMMA  shift 82
	EQUAL  shift 83
	N_EQUAL  shift 84
	GREAT_EQ  shift 85
	LESS_EQ  shift 86
	AND  shift 87
	OR  shift 88
	PPLUS  shift 53
	MMINUS  shift 54
	ASSIGN_ADD  shift 89
	ASSIGN_MINUS  shift 90
	ASSIGN_TIMES  shift 91
	ASSIGN_DIV  shift 92
	ASSIGN_MOD  shift 93
	RPAREN  shift 113
	LBRACK  shift 94
	.  error

	unary_assignment  goto 95
	binary_op  goto 96
	binary_assignment  goto 97


state 73
	binary_assignment : ASSIGN .  (99)

	.  reduce 99


state 74
	binary_op : PLUS .  (86)

	.  reduce 86


state 75
	binary_op : MINUS .  (87)

	.  reduce 87


state 76
	binary_op : TIMES .  (83)

	.  reduce 83


state 77
	binary_op : DIV .  (84)

	.  reduce 84


state 78
	binary_op : GREATER .  (89)

	.  reduce 89


state 79
	binary_op : LESS .  (88)

	.  reduce 88


state 80
	binary_op : MOD .  (85)

	.  reduce 85


state 81
	expression : expression Q_MARK . expression COLON expression  (70)
